# frostbit

./: Cargo.toml  README.md
.github/workflows/: build.yml  rust-clippy.yml  rust.yml
src/: config.rs  controller.rs  main.rs  myserial.rs  sidebar.rs  terminal.rs
src/theme/: theme.rs
