[package]
name = "frostbit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bitcore ={ version = "0.1.0", git = "https://github.com/dgtlrst/bitcore" }
iced = "0.13.1"
rand = "0.8"
serde = "1.0.217"
serde_json = "1.0.137"
serialport = "4.7.0"
tracing = "0.1.41"
tracing-subscriber = {version="0.3", features=["env-filter"]}
